--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
             padding: 0;
         }
 
+        .body a {
+            text-decoration: none;
+        }
+
         .header {
             background-color: var(--primary); 
             color: white; 
@@ -62,6 +66,12 @@
           <li>CSGO/CS2</li>
           <li>Learning about Human Psychology/Behaviour</li>
         </ul>
+      </section>
+      <section>
+        <a 
+            href="https://github.com/puneet2715/css101" 
+            target="_blank" 
+            rel="noopener noreferrer">Link to Source Code</a>
       </section>
     </main>
     
