minor update to resume domain extention

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,12 @@
             target="_blank" 
             rel="noopener noreferrer">Link to Source Code</a>
       </section>
+      <section>
+      	<a 
+	    href="https://resume.shadowdragon.dev"
+	    target="_blank"
+	    rel="noopener noreferrer">Link to Existing Portfolio</a>
+      </section>
     </main>
     
     <footer class="footer">
